# onedrive-mcp-server

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_security_review.py
.github/workflows/: ci.yml
src/onedrive_mcp/: __init__.py  __main__.py  auth.py  graph.py  server.py
tests/: test_auth.py  test_graph.py  test_server.py
