[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onedrive-mcp-server"
version = "0.1.0"
description = "Minimal, secure MCP server for OneDrive file sharing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "msal>=1.28.0",
    "httpx>=0.27.0",
]

[project.scripts]
onedrive-mcp = "onedrive_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/onedrive_mcp"]
