[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onedrive-mcp-server"
version = "0.1.0"
description = "Minimal, secure MCP server for OneDrive file sharing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp==1.26.0",
    "msal==1.35.0",
    "httpx==0.28.1",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.9",
]

[project.scripts]
onedrive-mcp = "onedrive_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/onedrive_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
ignore = ["S603", "S607", "S101", "S105"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
